--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "backend"]
 	path = backend
 	url = https://github.com/username/back-end-repository.git
+[submodule "frontend"]
+	path = frontend
+	url = https://github.com/username/frontend-repository.git
